--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,12 @@
     "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "framer-motion": "^12.6.5",
+    "i18next": "^25.2.0",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0"
   },
