--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js"
   },
