--- a/back/.env
+++ b/back/.env
@@ -2,8 +2,8 @@
 
 PORT=3001
 JWT_SECRET=super-max-secret
-HOST=https://t1f0cmn0-3001.uks1.devtunnels.ms/
+HOST=https://9d36-84-121-27-39.ngrok-free.ap
+s
 
 
-
-FRONTEND_URL=https://t1f0cmn0-3000.uks1.devtunnels.ms
+FRONTEND_URL=https://9d36-84-121-27-39.ngrok-free.ap
